--- a/public/index.html
+++ b/public/index.html
@@ -641,6 +641,11 @@
 
     </div><!-- main -->
 
+    <div id="loader">
+        <p id="loader-text">loading ...</p>
+        <img src="pix/loaderBubble.webp" alt="loading">
+    </div>
+
     <div id="alert"></div>
 
     <script src="definitions.js"></script>
