--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <title>openTicket</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.png" />
-    <meta property="og:url" content="https://www.app.fablog.eu/openTicket/">
+    <meta property="og:url" content="https://app.fablog.eu/openTicket/">
     <meta property="og:type" content="app">
     <meta property="og:title" content="openTicket - way more than just a todo app">
     <meta property="og:description" content="openTicket helps you organize complex tasks or projects offering an innovative design as well as numerous filtering and sorting options">
-    <meta property="og:image" content="https://www.app.fablog.eu/openTicket/public/pix/screenshotApp.png">
+    <meta property="og:image" content="https://app.fablog.eu/openTicket/pix/screenshotApp.png">
 </head>
 
 <body>
