--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>openTicket</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="openTicket helps you organize complex tasks or projects offering an innovative design as well as numerous filtering and sorting options">
     <meta property="og:url" content="https://app.fablog.eu/openTicket/">
     <meta property="og:type" content="app">
     <meta property="og:title" content="openTicket - way more than just a todo app">
