--- a/public/index.html
+++ b/public/index.html
@@ -477,7 +477,7 @@
             <p class="small">Note that changing your email address will require that you use the new email address for
                 logging in.</p>
             <hr class="hrHighLight">
-            <button type="submit" onclick="dismissEditedPersonalData()">dismiss</button>
+            <button type="button" onclick="dismissEditedPersonalData()">dismiss</button>
             <button type="submit" onclick="saveEditedPersonalData()">save changes</button>
         </div>
 
