--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
 </head>
 
 <body>
+    
+    <script src="loader.js"></script>
+    
     <div class="header">
         <img src="pix/logoStacked.webp" alt="openTicket logo" id="logoStacked">
         <img src="pix/bubbles.webp" alt="start screen" id="btnStartBubbles" title="start screen">
